# nkululeko

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  README.md  Singularity.def  bundestag_exp.py  check.ini  compare_emodbs.py  exp_agender.ini  exp_bdtg.py  exp_bdtg_audid.ini  exp_bdtg_audid.py  exp_bdtg_cnn.ini  exp_bdtg_mlp.ini  exp_bundestag.ini  exp_emocomp.ini  exp_emocomp.py  exp_emodb.ini  exp_emodb.py  exp_emodb_mlp.ini  exp_emodb_mlp.py  exp_emodb_param_opt.ini  exp_emodb_param_opt_xgb.ini  exp_svm.ini  exp_test.ini  exp_xgb.ini  ini_file.md  main.py  make_package.sh  my_experiment.py  output.txt  paper.bib  paper.md  pyproject.toml  requirements-test.txt  requirements.txt  (+13 more)
.claude/: SKILL.md
.github/: copilot-instructions.md
cocosda_2024/: exp_agedb_class_agender.ini  exp_agedb_class_os_praat.ini  exp_agedb_class_os_svm.ini  exp_agedb_class_os_xgb.ini  exp_agedb_class_praat_svm.ini  exp_emns_audmodel.ini  exp_emns_finetuning.ini  exp_emns_hubert.ini  exp_emns_os.ini  exp_emns_wavlm.ini  exp_iemocap_audmodel_svm.ini  exp_iemocap_hubert_svm.ini  exp_iemocap_wavlm_svm.ini  exp_jnv_audmodel.ini  exp_jnv_hubert.ini  exp_jnv_wavlm.ini  exp_jtes_audmodel.ini  exp_jtes_hubert.ini  exp_jtes_wavlm.ini  exp_kbes_audmodel.ini  exp_kbes_hubert.ini  exp_kbes_wavlm.ini  exp_laughter_os.ini  exp_laughter_praat.ini  exp_podcast_audmodel_svm.ini  exp_podcast_hubert_svm.ini  exp_podcast_wavlm_svm.ini  exp_polish_audmodel.ini  exp_polish_hubert.ini  exp_polish_wavlm.ini  exp_ravdess_gender_agender.ini  exp_ravdess_gender_os.ini  exp_ravdess_gender_praat.ini  exp_ravdess_speaker.ini  exp_ravdess_speaker_os.ini  exp_ravdess_speaker_praat.ini  exp_tth_audmodel.ini  exp_tth_hubert.ini  exp_tth_wavlm.ini  exp_turev_audmodel.ini  (+5 more)
data/: CI_VALIDATION.md  CONTRIBUTING_DATABASES.md  DESCR_FORMAT.md  README.md  SUMMARY.md  TESTING.md  descr.yml  make_descriptions.ipynb  make_readme.py  migrate_descr.py
demos/: demo_best_model.py  exp_cross.ini  exp_emodb.ini  exp_emodb_local.ini  exp_emodb_mlp.ini  my_experiment.py
docs/: README.md  class_diagram.md  emotion2vec_finetuning.md  index.md  requirements.txt
examples/: README.md  age_tu.ini  augment_auglib.ini  emodb_aug_train.ini  emodb_demo.ini  emodb_testspeakers.ini  exp_agedb_agender_mlp.ini  exp_agedb_class_os_xgb.ini  exp_agedb_explore_data.ini  exp_agedb_explore_features.ini  exp_agedb_os_mlp.ini  exp_agedb_os_xgr.ini  exp_agedb_scale.ini  exp_androids_cnn.ini  exp_androids_predict.ini  exp_androids_resample.ini  exp_androids_segment.ini  exp_balancing_adasyn.ini  exp_balancing_borderlinesmote.ini  exp_balancing_clustercentroids.ini  exp_balancing_editednearestneighbours.ini  exp_balancing_randomundersampler.ini  exp_balancing_ros.ini  exp_balancing_smote.ini  exp_balancing_smoteenc.ini  exp_balancing_smoteenn.ini  exp_balancing_smotetomek.ini  exp_balancing_svmsmote.ini  exp_balancing_tomeklinks.ini  exp_csvdata_os_xgb.ini  exp_dementianet_praat_xgb.ini  exp_emodb-aug_os_xgb.ini  exp_emodb_ast_xgb.ini  exp_emodb_auddim_xgb.ini  exp_emodb_audmodel_mlp.ini  exp_emodb_audmodel_xgb.ini  exp_emodb_augment_os_xgb.ini  exp_emodb_balancing.ini  exp_emodb_binscaled.ini  exp_emodb_clap_mlp.ini  (+85 more)
exp_svd/: plot_roc.py
nkululeko/: ap_age.py  ap_arousal.py  ap_dominance.py  ap_gender.py  ap_mos.py  ap_pesq.py  ap_sdr.py  ap_snr.py  ap_stoi.py  ap_valence.py  aug_train.py  augment.py  augmenter.py  autopredict.py  balance.py  balancer.py  bundle.py  cacheddataset.py  constants.py  dataset.py  dataset_csv.py  dataset_ravdess.py  demo-ft.py  demo.py  demo_feats.py  demo_predictor.py  ensemble.py  experiment.py  experiment_felix.py  explore.py  export.py  feats_agender.py  feats_agender_agender.py  feats_analyser.py  feats_audmodel.py  feats_audmodel_dim.py  feats_clap.py  feats_import.py  feats_mld.py  feats_mos.py  (+61 more)
package/: README.md  pyproject.toml
paper/: Makefile  paper.bib  paper.md
run_scripts/: run_balancing_experiments.sh
scripts/: run_balancing_experiments.sh  run_ensemble.sh  run_modules.sh  run_parallel.sh  run_scaler_experiments.sh  test_all_activations.sh  test_install.py
src/: agender.py  augmenter.py  bdtg_cnn_exp.py  bundestag_exp.py  cacheddataset.py  cnnmodel.py  compare_emodbs.py  concordance_cor_coeff.py  constants.py  dataset copy.py  dataset.py  dataset_csv.py  dataset_emodb.py  dataset_ravdess.py  demo_predictor.py  emodb.py  experiment.py  feats_audid.py  feats_audmodel.py  feats_import.py  feats_mld.py  feats_opensmile.py  feats_oxbow.py  feats_praat.py  feats_spectra.py  feats_transformer.py  feats_trill.py  feats_wav2vec2.py  feature_extractor.py  featureset.py  feinberg_praat.py  filter_data.py  glob_conf.py  loss_softf1loss.py  main.py  mld_fset.py  model.py  model_bayes.py  model_cnn.py  model_gmm.py  (+24 more)
tests/: __init__.py  data_roots.ini  demo_model.py  emodb_aug_train.ini  emodb_demo.ini  exp_add_learned.ini  exp_add_learned.py  exp_agedb_agender_mlp.ini  exp_agedb_class_os_xgb.ini  exp_agedb_explore_data.ini  exp_agedb_os_mlp.ini  exp_agedb_os_xgr.ini  exp_androids_explore.ini  exp_androids_os_svm.ini  exp_androids_predict.ini  exp_androids_resample.ini  exp_androids_segment.ini  exp_androids_segment_use.ini  exp_austrian_os_xgb.ini  exp_bdtg.ini  exp_bdtg.py  exp_bdtg_class.ini  exp_bdtg_class.py  exp_cross.ini  exp_cross.py  exp_cross_save_test.ini  exp_cross_save_test.py  exp_csvdata_os_xgb.ini  exp_emodb-aug_os_xgb.ini  exp_emodb.ini  exp_emodb.py  exp_emodb_auddim_xgb.ini  exp_emodb_audmodel_mlp.ini  exp_emodb_audmodel_xgb.ini  exp_emodb_augment_os_xgb.ini  exp_emodb_clap_mlp.ini  exp_emodb_clap_xgb.ini  exp_emodb_cnn.ini  exp_emodb_conformer.ini  exp_emodb_explore_data.ini  (+66 more)
tests_tmp/: demo.py  demo_model.py  exp_auparl.ini  exp_auparl.py  exp_bdtg.ini  exp_bdtg.py  exp_bdtg_class.ini  exp_bdtg_cross.ini  exp_bdtg_cross.py  exp_cross.ini  exp_cross.py  exp_danish.ini  exp_danish.py  exp_emodb.py  exp_emodb_add_csv.ini  exp_emodb_add_csv.py  exp_emodb_only-test.ini  exp_emodb_trill.ini  exp_emodb_trill.py  exp_emovo.ini  exp_emovo.py  exp_irony_reg.py  (+18 more)
(+890 files in other folders)
