[build-system]
requires = [
  "setuptools>=54",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nkululeko"
version = "0.95.8"
description = "Machine learning audio prediction experiments based on templates"
authors = [
    {name = "Felix Burkhardt", email = "fxburk@gmail.com"},
    {name = "Bagus Tris Atmaja", email = "btatmaja@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["machine learning", "audio", "emotion recognition", "speech processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = [
    "audeer>=1.0.0",
    "audformat>=1.3.1",
    "audinterface>=1.0.0",
    "audiofile>=1.0.0",
    "audiomentations==0.31.0",
    "audmetric>=1.0.0",
    "audonnx>=0.7.0",
    "confidence-intervals>=0.0.2",
    "datasets>=2.0.0",
    "imageio>=2.0.0",
    "matplotlib>=3.0.0",
    "numpy>=1.20.0",
    "opensmile>=2.0.0",
    "pandas>=1.0.0",
    "praat-parselmouth>=0.4.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.0.0",
    "seaborn>=0.11.0",
    "sounddevice>=0.4.0",
    "transformers>=4.0.0",
    "umap-learn>=0.5.0",
    "xgboost>=1.0.0",
    "pylatex>=1.0.0",
]

[project.optional-dependencies]
torch = [
    "torch>=1.0.0",
    "torchvision>=0.10.0",
    "torchaudio>=0.10.0",
]
torch-cpu = [
    "torch>=1.0.0",
    "torchvision>=0.10.0",
    "torchaudio>=0.10.0",
]
spotlight = [
    "renumics-spotlight>=1.6.13",
    "sliceguard>=0.0.35",
]
tensorflow = [
    "tensorflow>=2.0.0",
    "tensorflow-hub>=0.12.0",
]
all = [
    "torch>=1.0.0",
    "torchvision>=0.10.0", 
    "torchaudio>=0.10.0",
    "renumics-spotlight>=1.6.13",
    "sliceguard>=0.0.35",
    "tensorflow>=2.0.0",
    "tensorflow-hub>=0.12.0",
    "shap>=0.40.0",
    "imblearn>=0.0.0",
    "cylimiter>=0.0.1",
    "audtorch>=0.0.1",
    "splitutils>=0.0.1",
]

[project.scripts]
"nkululeko.explore" = "nkululeko.explore:main"
"nkululeko.nkululeko" = "nkululeko.nkululeko:main"
"nkululeko.augment" = "nkululeko.augment:main"
"nkululeko.demo" = "nkululeko.demo:main"
"nkululeko.export" = "nkululeko.export:main"
"nkululeko.predict" = "nkululeko.predict:main"
"nkululeko.resample" = "nkululeko.resample:main"
"nkululeko.segment" = "nkululeko.segment:main"
"nkululeko.test" = "nkululeko.test:main"
"nkululeko.ensemble" = "nkululeko.ensemble:main"

[project.urls]
Homepage = "https://github.com/felixbur/nkululeko"
Repository = "https://github.com/felixbur/nkululeko"
Documentation = "https://github.com/felixbur/nkululeko"
Issues = "https://github.com/felixbur/nkululeko/issues"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
