[metadata]
name = nkululeko
version = 0.43.1
author = Felix Burkhardt
author_email = fxburk@gmail.com
description = Do machine learning audio classification experiments
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/felixbur/nkululeko
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer
    audformat
    audinterface
    audiofile
    audonnx
    datasets
    imageio
    matplotlib
    numpy
    opensmile
    pandas
    praat-parselmouth
    scikit_learn
    scipy
    seaborn
    sounddevice
    tensorflow
    tensorflow_hub
    torch
    transformers
    xgboost
python_requires = >=3.6
include_package_data = False