[metadata]
name = nkululeko
author = Felix Burkhardt
author_email = fxburk@gmail.com
description = Machine learning audio prediction experiments based on templates
version = attr: nkululeko.__version__
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/felixbur/nkululeko
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer
    audformat
    audinterface
    audiofile
    audiomentations
    audmetric
    audonnx
    confidence_intervals
    datasets
    imageio
    laion-clap
    matplotlib
    numpy
    opensmile
    pandas
    praat-parselmouth
    scikit_learn
    scipy
    seaborn
    sounddevice
    tensorflow
    tensorflow_hub
    torch
    torchvision
    transformers
    umap-learn
    xgboost
    pylatex
python_requires = >=3.6
include_package_data = False
