[metadata]
name = nkululeko
author = Felix Burkhardt
author_email = fxburk@gmail.com
description = Machine learning audio prediction experiments based on templates
version = attr: nkululeko.__version__
# long_description = file: README.md, CHANGELOG.md
# long_description_content_type = text/markdown
url = https://github.com/felixbur/nkululeko
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer>=1.0.0
    audformat>=1.3.1
    audinterface>=1.0.0
    audiofile>=1.0.0
    audiomentations==0.31.0
    audmetric>=1.0.0
    audonnx>=0.7.0
    confidence-intervals>=0.0.2
    datasets>=2.0.0
    imageio>=2.0.0
    matplotlib>=3.0.0
    numpy>=1.20.0
    opensmile>=2.0.0
    pandas>=1.0.0
    praat-parselmouth>=0.4.0
    scikit_learn>=1.0.0
    scipy>=1.0.0
    seaborn>=0.11.0
    sounddevice>=0.4.0
    transformers>=4.0.0
    umap-learn>=0.5.0
    xgboost>=1.0.0
    pylatex>=1.0.0
python_requires = >=3.9
include_package_data = False

[options.extras_require]
torch =
    torch>=1.0.0
    torchvision>=0.10.0
    torchaudio>=0.10.0
torch-cpu =
    torch>=1.0.0
    torchvision>=0.10.0
    torchaudio>=0.10.0
torch-nightly =
    torch
    torchvision
    torchaudio
spotlight =
    renumics-spotlight>=0.1.0
    sliceguard>=0.0.35
tensorflow =
    tensorflow>=2.0.0
    tensorflow_hub>=0.12.0
all =
    torch>=1.0.0
    torchvision>=0.10.0
    torchaudio>=0.10.0
    renumics-spotlight>=0.1.0
    sliceguard>=0.1.0
    tensorflow>=2.0.0
    tensorflow_hub>=0.12.0
    shap>=0.40.0
    imblearn>=0.0.0
    cylimiter>=0.0.1
    audtorch>=0.0.1
    splitutils>=0.0.1
